--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProfiledAi</title>
     <base href="/ProfiledAi/" />
-    <!--    <base href="/" />-->
+<!--    <base href="/" />-->
     <link rel="stylesheet" href="app.css" />
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +17,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link rel="stylesheet" href="global.css">
+    
 </head>
 
 <body>
@@ -77,29 +78,8 @@
         </div> 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="dotnetInterops.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 <!--    <script>navigator.serviceWorker.register('service-worker.js');</script>-->
-    <!-- Bootstrap JS -->
-    <script>
-        // Mobile responsiveness - toggle sidebar
-        document.querySelector('.back-btn').addEventListener('click', function() {
-            document.querySelector('.sidebar').classList.remove('active');
-        });
-
-        document.querySelectorAll('.chat-item').forEach(item => {
-            item.addEventListener('click', function() {
-                if (window.innerWidth < 768) {
-                    document.querySelector('.sidebar').classList.remove('active');
-                }
-            });
-        });
-
-        // Show sidebar when clicking on profile in mobile view
-        document.querySelector('.profile-icon').addEventListener('click', function() {
-            if (window.innerWidth < 768) {
-                document.querySelector('.sidebar').classList.add('active');
-            }
-        });
-    </script>
 </body>
 </html>
